iFeature Changelog

****************************

Version 4.1.5 (04-24-12)
-Added missing $content_width global to theme setup function.

Version 4.1.4 (04-17-12)
-CSS fix for menu in IE.
-Removed ereg_replace from Google Font code for PHP 5.3 compatibility. 
-Re-added IE Quirks fix. 
-Removed some unused translation functions.

Version 4.1.3 (04-10-12)
-Fixed Twitter Bar @replies option in page options.
-Added Hebrew language files.
-Removed unecessary translations from several po files, updated corresponding mo files.

Version 4.1.2 (04-03-12)
-Twitter Bar no longer requires Twitter for WordPress plugin.
-Unidentified index error fix for meta box code. 
-Added Romanian language files. 
-Updated screenshot. 
-Removed height: auto from objects in responsive style sheet. 
-Fixed bug with archive of an empty category.
-Adjusted "viewport" initial scale for full-width mobile device view. 
-Added script to wrap YouTube and Vimeo embeds in special div when responsive design is enabled. 

Version 4.1.1 (03-28-12)
-Updated missed Google Font library call for SSL support.
-Fixed strange quotes around HTML elements in Google +1 button code.
-Only enqueue Google +1 script if enabled in theme options.
-Fix for Facebook Like and Google +1 alignment on Single and Archive templates.
-Changed <!--more--> link text to "Read more…" when the_content() is used.
-Fixed several translation functions.
-Updated core.pot.

Version 4.1 (03-21-12)
-Clear fix for posts for non logged-in users.
-Re-added PressTrends with new opt-in only option. 
-Fix for Google +1 button.
-Updated core.pot
-Added Croatian translation files.

Version 4.0.9 (03-14-12)
-Added French translation files.
-CSS fix for search widget.
-zindex fix for fallback menu dropdowns.
-IE8 fix for featured images.
-Minor style and copy tweaks. 
-Removed some old images.

Version 4.0.8 (03-08-12)
-Removed PressTrends function.

Version 4.0.7 (03-07-12)
-Fixed typo in theme options panel.
-Fix for page titles.